<resources>
    <string name="app_name">RefPRO Watch</string>
    <string name="hello_world">Hello World!</string>

    <string name="logText">emptyLog</string>
    <string name="backButtonText">Back</string>

    <string name="logButton">Log</string>
    <string name="undoButton">Undo</string>
    <string name="endHalfButton">End Half</string>

    <string name="extraTimeButton">Extra Time</string>
    <string name="startExtraTimeButton">Start Extra Time</string>
    <string name="endExtraTimeButton">End Extra Time</string>
    <string name="secondExtraTimeButton">Extra Time №2</string>
    <string name="penaltiesButton">Penalties</string>

    <string name="displayHalf">FH</string>

    <string name="goalEvent">GOAL</string>
    <string name="ownGoalEvent">OWN GOAL</string>
    <string name="substitutionEvent">SUBSTITUTION</string>
    <string name="yellowCardEvent">YELLOW CARD</string>
    <string name="redCardEvent">RED CARD</string>
    <string name="canceledEvent"> CANCELED</string>

    <string name="removeEventSuccess">YOU REMOVED LAST OPERATION</string>
    <string name="removeEventError">YOU CAN\'T REMOVE LAST OPERATION</string>

    <string name="question">Are you sure?</string>
    <string name="positiveAnswer">Yes</string>
    <string name="negativeAnswer">No</string>
    <string name="terminateMatch">Terminate</string>

    <string name="defaultTeamName">DTN</string>
    <string name="defaultResult">0</string>
    <string name="defaultTimer">00:00</string>

    <string name="startButton">Start</string>
    <string name="matchStartedText">MATCH STARTED</string>
    <string name="matchTerminatedText">MATCH TERMINATED</string>

    <string name="defaultName">1.Alexander Verbovskiy</string>

    <string name="secondHalfText">START SECOND HALF</string>
    <string name="fullTimeText">FULL TIME</string>
    <string name="halfTimeTextShort">HT</string>
    <string name="secondHalfTextShort">SH</string>
    <string name="fullTimeTextShort">FT</string>
    <string name="extraTimeTextShort">ET</string>
    <string name="penaltiesTimeTextShort">PS</string>

    <string name="firstHalfEnd">END OF FIRST HALF</string>
    <string name="secondHalfStart">SECOND HALF</string>

    <string name="redCardsWarning">TOO MANY RED CARDS</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>

</resources>
