<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232323"
    tools:context="com.elsys.refpro.refprowatch.main.MainActivity"
    tools:deviceIds="wear">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timerLayout"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/displayHalf"
            android:layout_toEndOf="@+id/displayHalf"
            android:scaleType="fitCenter"
            android:src="@drawable/background"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timerLayout"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/displayHalf"
            android:layout_toStartOf="@+id/displayHalf"
            android:scaleType="fitCenter"
            android:src="@drawable/background"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/awayLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/timerLayout"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/displayHalf"
            android:onClick="changeFragment">

        </RelativeLayout>

        <TextView
            android:id="@+id/awayAbbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="28dp"
            android:text="@string/defaultTeamName"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/homeAbbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="28dp"
            android:text="@string/defaultTeamName"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/displayHalf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/homeResult"
            android:layout_centerHorizontal="true"
            android:text="@string/displayHalf"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/awayResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/homeResult"
            android:layout_alignBottom="@+id/homeResult"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/displayHalf"
            android:text="@string/defaultResult"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/homeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/timerLayout"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/displayHalf"
            android:onClick="changeFragment">

        </RelativeLayout>

        <TextView
            android:id="@+id/homeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/homeAbbr"
            android:layout_marginTop="14dp"
            android:layout_toStartOf="@+id/displayHalf"
            android:text="@string/defaultResult"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:format12Hour="HH:mm"
            android:format24Hour="HH:mm"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/timerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/awayResult"
            android:onClick="startTimer">

            <TextView
                android:id="@+id/extraTimeTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/currentTimeTimer"
                android:layout_centerHorizontal="true"
                android:text="@string/defaultTimer"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/currentTimeTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/defaultTimer"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/startMatchButton"
                style="@android:style/Widget.Holo.ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/currentTimeTimer"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/currentTimeTimer"
                android:background="@drawable/action_item_background"
                android:scaleType="centerInside"
                android:src="@mipmap/logo"
                android:text="@string/startButton" />

        </RelativeLayout>
    </RelativeLayout> <!-- Main Layout (timers, result, teams) -->

    <RelativeLayout
        android:id="@+id/teamLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <TextView
            android:id="@+id/displayHalfTeamLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:text="@string/displayHalf"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TeamLayoutAbbr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.31"
            android:text="@string/defaultTeamName"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextClock
            android:id="@+id/teamLayoutClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:format12Hour="HH:mm"
            android:format24Hour="HH:mm"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/displayHalfTeamLayout"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/goalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goalEvent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/substituteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/substitutionEvent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/yellowCardButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellowCardEvent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/redCardButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/redCardEvent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/teamLayoutBackButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/backButtonText"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout> <!-- Team Layout (home/away team, create new event for goal/substitute/yellow/red card) -->

    <RelativeLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/logButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/logButton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/undoButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logButton"
                    android:layout_centerHorizontal="true"
                    android:text="@string/undoButton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/endHalfButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:lineSpacingExtra="18sp"
                    android:text="@string/endHalfButton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/extraTimeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extraTimeButton"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/terminateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terminateMatch"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/settingsBackButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/backButtonText"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout> <!-- Settings Layout (end match/log/undo operations) -->

    <LinearLayout
        android:id="@+id/listPlayersLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/listPlayersView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout> <!-- ListPlayers Layout (list of home/away players) -->

    <LinearLayout
        android:id="@+id/logLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="142dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/displayLog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logText"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/logBackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backButtonText" />
    </LinearLayout> <!-- Log Layout (list of all events in the match) -->

    <LinearLayout
        android:id="@+id/listSubsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="179dp">

            <LinearLayout
                android:id="@+id/listSubsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>

    <!-- List Substitutes Layout (list of home/away substitutes) -->

</RelativeLayout>
